logs/slapos.package.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/iniparse'...
Compiling './lib/python3.5/site-packages/iniparse/compat.py'...
***   File "./lib/python3.5/site-packages/iniparse/compat.py", line 59
    raise ValueError, 'Invalid section name: %s' % section
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iniparse-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slapos'...
Listing './lib/python3.5/site-packages/slapos/package'...
Compiling './lib/python3.5/site-packages/slapos/package/conf.py'...
***   File "./lib/python3.5/site-packages/slapos/package/conf.py", line 85
    def create(path, text=None, mode=0666):
                                        ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/slapos/package/distribution.py'...
***   File "./lib/python3.5/site-packages/slapos/package/distribution.py", line 258
    print "The signature for your current system is: %s" % \
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/slapos/package/promise'...
Listing './lib/python3.5/site-packages/slapos/package/promise/template'...
Compiling './lib/python3.5/site-packages/slapos/package/signature.py'...
***   File "./lib/python3.5/site-packages/slapos/package/signature.py", line 152
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/slapos/package/template'...
Listing './lib/python3.5/site-packages/slapos/package/test'...
Listing './lib/python3.5/site-packages/slapos.libnetworkcache-0.15.egg-info'...
Listing './lib/python3.5/site-packages/slapos.package-0.2.1.1.egg-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/iniparse-0.4'...
Listing './share/python-wheels'...
